// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Playground /> should render with all available passed in props 1`] = `
<Resizable
  enable={
    Object {
      "bottom": false,
      "bottomLeft": false,
      "bottomRight": false,
      "left": false,
      "right": true,
      "top": false,
      "topLeft": false,
      "topRight": false,
    }
  }
  handleComponent={
    Object {
      "right": [Function],
    }
  }
  handleStyles={
    Object {
      "right": Object {
        "right": 8,
      },
    }
  }
  maxWidth="100%"
  minWidth={320}
>
  <LiveProvider
    className="css-5aoufr"
    code="<div>
  Playground
</div>"
    mode="handleOnly"
    scope={
      Object {
        "OptionList": [Function],
      }
    }
  >
    <LivePreview
      align="flex-start"
      className="css-xlsnbg"
    />
    <LiveError
      className="css-1mfynrb"
    />
    <div
      pose="closed"
    >
      <BaseEditor
        className="css-1j22wvk"
        onBeforeChange={[Function]}
        options={
          Object {
            "lineNumbers": true,
            "lineWrapping": true,
            "mode": "jsx",
            "scrollbarStyle": null,
            "tabSize": 2,
            "viewportMargin": Infinity,
          }
        }
        value="<div>
  Playground
</div>"
      />
    </div>
  </LiveProvider>
</Resizable>
`;

exports[`<Playground /> should render with minimum requirements 1`] = `
<Resizable
  enable={
    Object {
      "bottom": false,
      "bottomLeft": false,
      "bottomRight": false,
      "left": false,
      "right": true,
      "top": false,
      "topLeft": false,
      "topRight": false,
    }
  }
  handleComponent={
    Object {
      "right": [Function],
    }
  }
  handleStyles={
    Object {
      "right": Object {
        "right": 8,
      },
    }
  }
  maxWidth="100%"
  minWidth={320}
>
  <LiveProvider
    className="css-5aoufr"
    code="<div>
  Playground
</div>"
    mode="full"
  >
    <LivePreview
      align="flex-start"
      className="css-xlsnbg"
    />
    <div
      className="css-1aa4jxg"
    >
      <button
        className="css-o69cv9"
        onClick={[Function]}
      >
        <svg
          fill="none"
          height="1.15em"
          size="1.15em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1.15em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="16 18 22 12 16 6"
          />
          <polyline
            points="8 6 2 12 8 18"
          />
        </svg>
        <div
          className="css-ivhnjk"
        >
          Code
        </div>
      </button>
      <button
        className="css-o69cv9"
        disabled={false}
        onClick={[Function]}
      >
        <div
          pose="stop"
          rotation={0}
        >
          <svg
            fill="none"
            height="0.9em"
            size="0.9em"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="0.9em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="23 4 23 10 17 10"
            />
            <polyline
              points="1 20 1 14 7 14"
            />
            <path
              d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
            />
          </svg>
        </div>
        <div
          className="css-ivhnjk"
        >
          Refresh
        </div>
      </button>
    </div>
    <LiveError
      className="css-s7cjye"
    />
    <div
      pose="closed"
    >
      <BaseEditor
        className="css-umkx8t"
        onBeforeChange={[Function]}
        options={
          Object {
            "lineNumbers": false,
            "lineWrapping": true,
            "mode": "jsx",
            "scrollbarStyle": null,
            "tabSize": 2,
            "viewportMargin": Infinity,
          }
        }
        value="<div>
  Playground
</div>"
      />
    </div>
  </LiveProvider>
</Resizable>
`;
